--- a/signin.html
+++ b/signin.html
@@ -1,3 +1,6 @@
+// this password site has HORRIBLE SECURITY, dont use any trusted passwords or to hide anything serious.
+// line 34 to change password, default to TN
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
