--- a/signin.html
+++ b/signin.html
@@ -1,5 +1,5 @@
-// this password site has HORRIBLE SECURITY, dont use any trusted passwords or to hide anything serious.
-// line 34 to change password, default to TN
+<!-- this password site has HORRIBLE SECURITY, dont use any trusted passwords or to hide anything serious. -->
+<!-- line 34 to change password, default to TN -->
 
 <!DOCTYPE html>
 <html lang="en">
