--- a/signin.html
+++ b/signin.html
@@ -39,7 +39,7 @@
             // Check if the entered password is correct
             if (enteredPassword === correctPassword) {
                 // Redirect to the specified URL
-                window.location.href = '/pdfbomb/SecuredPDFBomb-OnTop-Fedoralovesu-29319239129912943828991248918943894189384919345356450349231453456635634563456345634563455467456755123.html';
+                window.location.href = '/pdfbomb/main.html';
             } else {
                 // Display an error message
                 document.getElementById('error-message').innerText = 'Incorrect password. Please try again.';
