--- a/main.html
+++ b/main.html
@@ -5,16 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/pdfbomb/style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-    <title>Document</title>
+    <title>SecuredPDFBomb</title>
 </head>
 <body>
     <div id="flashing-text">SecuredPDFBomb</div>
     <input id="pdf-first-name" type="text" placeholder="First Name">
     <input id="pdf-last-name" type="text" placeholder="Last Name">
-    <input id="pdf-link" type="text" value="https://site.com/"> <!-- Set default value -->
+    <input id="pdf-link" type="text" value="https://site.com/"> 
     <button id="create-pdf" onclick="gen()">Submit</button>
 
-    <!-- Add small buttons for auto inputs -->
+
     <div id="auto-input-buttons">
         <button onclick="setAutoInput('https://discord.com/app/')">Discord</button>
     </div>
