--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/pdfbomb/style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-    <title>SecuredPDFBomb</title>
+    <title>SecuredPDFBomb - Made by fedoralovesu</title>
 </head>
 <body>
     <div id="flashing-text">SecuredPDFBomb</div>
