--- a/signin.html
+++ b/signin.html
@@ -39,7 +39,7 @@
             // Check if the entered password is correct
             if (enteredPassword === correctPassword) {
                 // Redirect to the specified URL
-                window.location.href = '/pdfbomb/main.html';
+                window.location.href = 'main.html';
             } else {
                 // Display an error message
                 document.getElementById('error-message').innerText = 'Incorrect password. Please try again.';
